syntax = "proto3";

package corebanking;

import "google/protobuf/timestamp.proto";
import "Protos/account.proto"; 

option csharp_namespace = "CoreBanking.API.gRPC";

// Enhanced account service with streaming capabilities
service EnhancedAccountService {
  // Server streaming for real-time transaction monitoring
  rpc StreamTransactions (StreamTransactionsRequest) returns (stream TransactionResponse);
  
  // Client streaming for batch operations
  rpc BatchTransfer (stream TransferMoneyRequest) returns (BatchTransferResponse);
  
  // Bidirectional streaming for real-time trading
  rpc LiveTrading (stream TradingOrder) returns (stream TradingExecution);
}

// Trading-specific messages
message TradingOrder {
  string order_id = 1;
  string symbol = 2;
  string order_type = 3;  // "buy", "sell", "limit", "market"
  double quantity = 4;
  double price = 5;
  string account_number = 6;
  google.protobuf.Timestamp order_time = 7;
}

message TradingExecution {
  string execution_id = 1;
  string order_id = 2;
  string symbol = 3;
  double quantity = 4;
  double price = 5;
  string status = 6;  // "pending", "filled", "partial", "cancelled", "rejected"
  string error_message = 8;
  google.protobuf.Timestamp timestamp = 9;
}

// Server streaming request for transactions
message StreamTransactionsRequest {
  string account_number = 1;
  int32 initial_batch_size = 2;
  google.protobuf.Timestamp start_date = 3;
  bool include_pending = 4;
  repeated string transaction_types = 5;  // "deposit", "withdrawal", "transfer"
}

// Batch transfer responses
message BatchTransferResponse {
  int32 total_processed = 1;
  int32 successful = 2;
  int32 failed = 3;
  repeated BatchTransferResult results = 4;
  google.protobuf.Timestamp completed_at = 5;
}

message BatchTransferResult {
  string reference = 1;
  bool success = 2;
  string message = 3;
  string transaction_id = 4;
  google.protobuf.Timestamp processed_at = 5;
}